# simbio-repressilator

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/simbio/models/repressilator/: __init__.py  metadata.toml
src/simbio/models/repressilator/figures/: 1c.py
